--- a/Game.html
+++ b/Game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <script type="text/Javascript" src="main.js" defer></script>
+    <script type="text/Javascript" src="main2.js" defer></script>
     <title>Document</title>
 </head>
 <body>
